--- a/style.css
+++ b/style.css
@@ -1,22 +1,49 @@
+.container-fluid {
+    background-color: dimgray;
+}
+
+.jumbotron {
+    text-align: center;
+    background-image: url(https://images.pexels.com/photos/125457/pexels-photo-125457.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500);
+    background-repeat: no-repeat;
+    background-position: left center;
+    background-size: 100%;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
 .row {
     margin-bottom: 10px;
+    
 }
-.col-4 {
+.col-3 {
     border-right: 1px solid black;
 }
 #weather {
-    padding: 50px;
+    padding: 50px 50px 30px;
     margin-bottom: 50px;
     background-color: darkgray;
-    
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+       
+}
+#oneDayDisplay {
+    background-color: darkgray;
+    border: solid black 1px;    
+
+
 }
 #uvindex{
     font-weight: bolder;
     color: black;
+    width: 120px;
 }
 #futureDisplay7, #futureDisplay15, #futureDisplay23, #futureDisplay31, #futureDisplay39{
-    display: inline;
+    
     border: solid black 1px;    
-    padding: 50px;
+    padding: 30px;
+    float: left;
+    width: 200px;
+    background-color: rgb(45, 45, 250);
+    font-size: bolder;
+    color: white;
 } 
