--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .container-fluid {
-    background-color: dimgray;
+    background-color: rgb(196, 192, 192);
 }
 
 .jumbotron {
@@ -11,14 +11,19 @@
     color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
+.citySearch {
+    border: 5px rgb(49, 49, 49) groove;
+    height: 630px;
+}
+.cityInput {
+    margin-top: 20px;
+}
 
 .row {
     margin-bottom: 10px;
     
 }
-.col-3 {
-    border-right: 1px solid black;
-}
+
 #weather {
     padding: 50px 50px 30px;
     margin-bottom: 50px;
@@ -28,7 +33,8 @@
 }
 #oneDayDisplay {
     background-color: darkgray;
-    border: solid black 1px;    
+    border: solid black 1px;  
+    margin-left: 20px;  
 
 
 }
@@ -39,11 +45,25 @@
 }
 #futureDisplay7, #futureDisplay15, #futureDisplay23, #futureDisplay31, #futureDisplay39{
     
-    border: solid black 1px;    
+    border: solid black 1px;  
+    margin: 0px 10px 0px 5px;  
     padding: 30px;
     float: left;
     width: 200px;
-    background-color: rgb(45, 45, 250);
+    background-color: rgb(77, 77, 252);
     font-size: bolder;
     color: white;
 } 
+.savedCities {
+    
+    background-color: cadetblue;
+    margin: 5px 0px 5px 0px;
+    height: 30px;
+    text-align: center;
+    font-weight: bolder;
+    color: white;
+    border: 3px black groove;
+}
+#futureDisplay {
+    margin-left: 30px;
+}
